Closed
Bug 1546415
Opened 6 years ago
Closed 6 years ago
Disable target=_blank on a/area elements imply rel=noopener for 67
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla68
People
(Reporter: baku, Assigned: baku)
References
Details
(Keywords: site-compat)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
+++ This bug was initially created as a clone of Bug #1522083 +++
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
status-firefox67:
--- → affected
tracking-firefox67:
--- → +
Updated•6 years ago
|
Assignee: nobody → amarchesini
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7f72db694e4f
Disable target=_blank on a/area elements imply rel=noopener for 67, r=neha
| Assignee | ||
Comment 3•6 years ago
|
||
Comment on attachment 9060119 [details]
Bug 1546415 - Disable target=_blank on a/area elements imply rel=noopener for 67, r=neha
Beta/Release Uplift Approval Request
- User impact if declined: Several regressions are triggered by enabling this feature.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This feature was just enabled in 67. We want to revert this change.
- String changes made/needed: none
Attachment #9060119 -
Flags: approval-mozilla-beta?
Comment 4•6 years ago
|
||
Comment on attachment 9060119 [details]
Bug 1546415 - Disable target=_blank on a/area elements imply rel=noopener for 67, r=neha
Uplift approved for 67 beta 14, thanks.
Attachment #9060119 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 5•6 years ago
|
||
This should be removed from the https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Releases/67#HTML section as we no longer ship this feature in 67
Comment 6•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox68:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Comment 7•6 years ago
|
||
| bugherder uplift | ||
Comment 8•6 years ago
|
||
Removing DDN; will track the eventual release of this change in the main bug.
Keywords: dev-doc-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•