Bug 1546415 - Disable target=_blank on a/area elements imply rel=noopener for 67, r=neha a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D28497